# ideal-octo-waddle

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt
docs/: memory_management_comparison.md
examples/: bool.next  factorial.next  for_loop.next  hello.next  leak_check.next  loop.next  vars.next
src/: main.cpp
src/codegen/: CodeGen.cpp  CodeGen.h
src/lexer/: Lexer.cpp  Lexer.h  Token.h
src/parser/: AST.h  Parser.cpp  Parser.h
src/sema/: Type.h  TypeChecker.cpp  TypeChecker.h
tests/: CMakeLists.txt  array_examples.pn  array_test.pn  complex_test.pn  simple_struct.pn  struct_test.pn
